Rade-914: fixed the alignment issue of rade button

--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -106,7 +106,7 @@
     rgba(255, 255, 255, 0) 144.92%
   );
   backdrop-filter: blur(25px);
-  padding: 56px 59px;
+  padding: 61px 60px;
   cursor: pointer;
 }
 .radeIcon {
